Add: #5 Add 42 oauth2 security
1. Add: Security Config
2. Add: SessionServise
3. Edit: change header cuz UserSession
4. Edit: Add script tag use bootstrap.bundle.js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
+#Security Setting
+spring.security.oauth2.client.registration.intra42.client-id=${UID42}
+spring.security.oauth2.client.registration.intra42.client-secret=${SECRET42}
+spring.security.oauth2.client.registration.intra42.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.intra42.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.intra42.client-name=intra42
+spring.security.oauth2.client.registration.intra42.scope=public
+
+spring.security.oauth2.client.provider.intra42.authorization-uri=https://api.intra.42.fr/oauth/authorize
+spring.security.oauth2.client.provider.intra42.user-info-uri=https://api.intra.42.fr/v2/me
+spring.security.oauth2.client.provider.intra42.token-uri=https://api.intra.42.fr/oauth/token
+spring.security.oauth2.client.provider.intra42.user-name-attribute=id
+
+
+#Database Setting
 spring.jpa.database=h2
 spring.jpa.show-sql=true
 
