--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,21 +1,32 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
-
-on: pull_request
+name: remote ssh command for deploy
+on:
+  push:
+    # main 브랜치에서만 작동합니다.
+    branches: [main]
+    paths-ignore:
+      - 'README.md'
+      - 'docs/**'
+#  pull_request:
+#    branches: [main]
+#    paths-ignore:
+#      - 'README.md'
+#      - 'docs/**'
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: '8'
-        distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: executing remote ssh commands using key
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd git/swlabs-helper
+            sh deploy.sh
