--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -11,13 +11,13 @@ spring.security.oauth2.client.provider.intra42.token-uri=https://api.intra.42.fr
 spring.security.oauth2.client.provider.intra42.user-name-attribute=id
 #Database Setting
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.username=${HELPER42_DB_USERNAME}
-spring.datasource.password=${HELPER42_DB_PASSWORD}
-spring.datasource.url=jdbc:mariadb://localhost:3306/${HELPER42_DB_NAME}
+spring.datasource.username=${HELPER42_DB_USERNAME_RELEASE}
+spring.datasource.password=${HELPER42_DB_PASSWORD_RELEASE}
+spring.datasource.url=jdbc:mariadb://localhost:3306/${HELPER42_DB_NAME_RELEASE}
 #Database jpa
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=true
 #Server setting
-server.port=9090
+server.port=8080
