EDIT: change secret key to static

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,9 +18,9 @@ jobs:
           collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
           mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
           mysql database: 'helper42dev' # Optional, default value is "test". The specified database which will be create
-          mysql root password: ${{ secrets.ROOTPASSWORD }} # Required if "mysql user" is empty, default is empty. The root superuser password
+          mysql root password: 'admin' #ty. The root superuser password
           mysql user: 'helper' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-          mysql password: ${{ secrets.DATABASEPASSWORD }} # Required if "mysql user" exists. The password for the "mysql user"
+          mysql password: 'helper' # Required if "mysql user" exists. The password for the "mysql user"
 
       - uses: actions/checkout@v2
       - name: Set up JDK 8
