--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.security.oauth2.client.provider.intra42.token-uri=https://api.intra.42.fr
 spring.security.oauth2.client.provider.intra42.user-name-attribute=id
 #Database Setting
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.username=${HELPER42_DB_USERNAME}
-spring.datasource.password=${HELPER42_DB_PASSWORD}
-spring.datasource.url=jdbc:mariadb://localhost:3306/${HELPER42_DB_NAME}
+spring.datasource.username=helper
+spring.datasource.password=helper
+spring.datasource.url=jdbc:mariadb://localhost:3306/helper42
 #Database jpa
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
