--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,6 @@ spring.datasource.embedded-database-connection=h2
 spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=io.seoul.helper.config.jpa.PhysicalNamingStrategy
 #Server setting
 server.port=9090
