Add: #57 Add init schema data sql files for test
This sql is only active at h2 env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@ spring.security.oauth2.client.provider.intra42.token-uri=https://api.intra.42.fr
 spring.security.oauth2.client.provider.intra42.user-name-attribute=id
 #Database Setting
 spring.datasource.embedded-database-connection=h2
+spring.sql.init.data-locations=classpath*:db/h2/data.sql
+spring.sql.init.schema-locations=classpath*:db/h2/schema.sql
 #Database jpa
 spring.jpa.database=h2
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.hibernate.naming.physical-strategy=io.seoul.helper.config.jpa.PhysicalNamingStrategy
 #Server setting
 server.port=9090
