추가: 개발환경 배포 스크립트 생성

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -4,8 +4,8 @@
 name: remote ssh command for deploy
 on:
   push:
-    # main 브랜치에서만 작동합니다.
-    branches: [main]
+    # develop 브랜치에서만 작동합니다.
+    branches: [develop]
     paths-ignore:
       - 'README.md'
       - 'docs/**'
@@ -28,5 +28,5 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd git/helper-release/scripts
+            cd git/helper-dev/scripts
             sh deploy.sh
