--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: remote ssh command for deploy
+name: remote ssh command for dev deploy
 on:
   push:
     # develop 브랜치에서만 작동합니다.
