--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,11 +1,11 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: remote ssh command for release deploy
+name: remote ssh command for dev deploy
 on:
   push:
-    # main 브랜치에서만 작동합니다.
-    branches: [main]
+    # develop 브랜치에서만 작동합니다.
+    branches: [develop]
     paths-ignore:
       - 'README.md'
       - 'docs/**'
@@ -28,5 +28,5 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd git/helper-release/scripts
+            cd git/helper-dev/scripts
             sh deploy.sh
