--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -5,7 +5,7 @@ name: remote ssh command for dev deploy
 on:
   push:
     # develop 브랜치에서만 작동합니다.
-    branches: [develop]
+    branches: [ develop ]
     paths-ignore:
       - 'README.md'
       - 'docs/**'
@@ -29,4 +29,4 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd git/helper-dev/scripts
-            sh deploy.sh
+            sh deploy-dev.sh
