properties에 loging 추가

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,3 +21,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=true
 #Server setting
 server.port=9090
+logging.file.name=helper.log
