--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -21,3 +21,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=true
 #Server setting
 server.port=8080
+logging.file.name=helper.log
