--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,5 +28,7 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
+            /bin/bash
+            echo $HELPER42_DB_NAME_RELEASE
             cd git/helper-dev/scripts
             sh deploy-dev.sh
