추가: #124 에러 페이지 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=100
 #Server setting
 server.port=8080
 logging.file.name=helper.log
+#Error page Setting
+server.error.whitelabel.enabled=false
