--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,5 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=100
 #Server setting
 server.port=9090
 logging.file.name=helper.log
+#Error page Setting
+server.error.whitelabel.enabled=false
