--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -25,3 +25,10 @@ server.port=8080
 logging.file.name=helper.log
 #Error page Setting
 server.error.whitelabel.enabled=false
+#Mail Setting
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${HELPER42_MAIL_ADDRESS}
+spring.mail.password=${HELPER42_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
