EDIT: dev와 release properties의 ddl auto를 none으로 수정

--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -16,7 +16,7 @@ spring.datasource.password=${HELPER42_DB_PASSWORD_RELEASE}
 spring.datasource.url=jdbc:mariadb://localhost:3306/${HELPER42_DB_NAME_RELEASE}
 #Database jpa
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
