--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,3 +32,7 @@ spring.mail.username=${HELPER42_MAIL_ADDRESS}
 spring.mail.password=${HELPER42_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#Sentry
+sentry.dsn=${HELPER42_SENTRY_DSN}
+sentry.logging.minimum-event-level=error
+sentry.environment=develop
