개선: #302 application.yaml spring.profile 교체
개선: oauth, mail yaml 파일을 읽지 못하는 버그 수정
Spring 2.4 버전 이후 spring.profile 이 deprecated 되었습니다.
이로인해 config 방식으로 교체합니다.

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,8 +1,9 @@
 spring:
-  profiles:
-    include:
-      - oauth
-      - mail
+  config:
+    activate:
+      on-profile:
+        - oauth
+        - mail
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     username: "${HELPER42_DB_USERNAME}"
