개선: #302 application.yaml spring.profile 교체
미숙한 숙지로 인한 잘못된 기능 사용
import로 교체

--- a/src/main/resources/application-release.yaml
+++ b/src/main/resources/application-release.yaml
@@ -1,9 +1,8 @@
 spring:
   config:
-    activate:
-      on-profile:
-        - oauth
-        - mail
+    import:
+      - "classpath:/application-oauth.yaml"
+      - "classpath:/application-mail.yaml"
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     username: "${HELPER42_DB_USERNAME_RELEASE}"
