--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,6 @@ spring:
     allow-bean-definition-overriding: true
   datasource:
     embedded-database-connection: "h2"
-    url: "jdbc:h2:tcp://localhost/~/test"
-    username: "sa"
-    password:
   sql:
     init:
       data-locations: classpath*:db/h2/data.sql
@@ -18,6 +15,7 @@ spring:
     database: h2
     hibernate:
       ddl-auto: none
+    show-sql: true
     properties:
       hibernate:
         default_batch_fetch_size: 100
