--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,11 +6,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   datasource:
-    url: "jdbc:h2:tcp://localhost/~/test"
-    driver-class-name: org.h2.Driver
-    username: "sa"
-    password:
-  #    embedded-database-connection: "h2"
+    embedded-database-connection: "h2"
   sql:
     init:
       data-locations: classpath*:db/h2/data.sql
